--- a/07_事件处理/键盘事件.html
+++ b/07_事件处理/键盘事件.html
@@ -22,6 +22,9 @@
         <!--绑定自定义按键-->
         <input type="text" placeholder="按下回车提示输入" @keyup.caps-lock="showKey">
 
+        <!--自定义按键：ctrl+y-->
+        <input type="text" placeholder="按下回车提示输入" @keyup.ctrl.y="showKey">
+
     </div>
 
 </body>
